--- a/src/app/raw-edit/raw-edit.component.html
+++ b/src/app/raw-edit/raw-edit.component.html
@@ -6,3 +6,15 @@
   <textarea [(ngModel)]="raw"></textarea>
   <button mat-raised-button (click)="save()" color="warn"> Save </button>
 </div>
+<div class="changelog container">
+  <h1>Change Log</h1>
+  <dl>
+    <dt><strong>Version 1.100</strong> - 9/5/2020</dt>
+    <dd>Large Multiclassing Feature enabled</dd>
+    <dd>A few copy updates</dd>
+    <dd>Enabled selection of any ability as prime requisite</dd>
+    <dd>Created changelog</dd>
+    <dd>Arbitrarily selected 1.100 because I'm lazy and didn't version things from the onset</dd>
+    <dd>Added version to header</dd>
+  </dl>
+</div>
