--- a/src/app/raw-edit/raw-edit.component.sass
+++ b/src/app/raw-edit/raw-edit.component.sass
@@ -3,3 +3,9 @@ h1
 textarea
   width: 100%
   min-height: 500px
+.changelog
+  text-align: center
+dl
+  margin: 0 auto
+  width: 40%
+  text-align: left
