--- a/src/styles.sass
+++ b/src/styles.sass
@@ -83,3 +83,11 @@ mat-dialog-content
 .unequip-icon
   padding: 0 10px
   vertical-align: middle
+
+.version
+  position: absolute
+  bottom: 0
+  margin-top: 10px
+  left: 12em
+  text-align: center
+  font-size: 8pt
