--- a/src/app/raw-edit/raw-edit.component.html
+++ b/src/app/raw-edit/raw-edit.component.html
@@ -1,12 +1,20 @@
 <div class="container">
   <h1> Developer Edit Mode </h1>
-  <p>If you started a cleric or magic user before the spell components were installed click this button to update your character raw
-  <strong>Pressing this button will erase your spell book and spells if you already have them.</strong><br />
-  <button mat-raised-button (click)="installSpells()"color="warn">Install Spells</button>
-  </p>
   <p> While this project is under active development and some key features are missing from the proper UI this view will
     exist to let you tweak and update your character by editing the raw JSON</p>
   <strong>You can mess up your character and cause unusual behavior. Please save your character before making changes</strong>
   <textarea [(ngModel)]="raw"></textarea>
   <button mat-raised-button (click)="save()" color="warn"> Save </button>
+</div>
+<div class="changelog container">
+  <h1>Change Log</h1>
+  <dl>
+    <dt><strong>Version 1.100</strong> - 9/5/2020</dt>
+    <dd>Large Multiclassing Feature enabled</dd>
+    <dd>A few copy updates</dd>
+    <dd>Enabled selection of any ability as prime requisite</dd>
+    <dd>Created changelog</dd>
+    <dd>Arbitrarily selected 1.100 because I'm lazy and didn't version things from the onset</dd>
+    <dd>Added version to header</dd>
+  </dl>
 </div>
