--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -53,6 +53,8 @@ mat-sidenav-container
   font-size: 14pt
   font-family: Cinzel
   padding: 4px
+  span
+    font-family: LibreBaskerville
 
 #character-movement-summary
   position: fixed
@@ -68,6 +70,7 @@ mat-sidenav-container
 
 #footer
   margin-bottom: 25px
+
 
 @media screen and (max-width: 1366px)
   .lock-icon
