--- a/src/app/raw-edit/raw-edit.component.html
+++ b/src/app/raw-edit/raw-edit.component.html
@@ -9,6 +9,9 @@
 <div class="changelog container">
   <h1>Change Log</h1>
   <dl>
+    <dt><strong>Version 1.101</strong> - 10/8/2020</dt>
+    <dd>Added AC to the HUD</dd>
+    <dd>Large Multiclassing Feature enabled</dd>
     <dt><strong>Version 1.100</strong> - 9/5/2020</dt>
     <dd>Large Multiclassing Feature enabled</dd>
     <dd>A few copy updates</dd>
