--- a/src/app/show-character/show-character.component.html
+++ b/src/app/show-character/show-character.component.html
@@ -1,6 +1,7 @@
 <div cdkDropListGroup>
   <character-overview [character]="character"></character-overview>
   <character-attributes [character]="character"></character-attributes>
+  <character-cleric [character]="character"></character-cleric>
   <character-spell-book [character]="character"></character-spell-book>
   <character-experience [character]="character"></character-experience>
   <character-purse [character]="character"></character-purse>
