updating versions and documentation

--- a/src/app/raw-edit/raw-edit.component.html
+++ b/src/app/raw-edit/raw-edit.component.html
@@ -9,6 +9,10 @@
 <div class="changelog container">
   <h1>Change Log</h1>
   <dl>
+    <dt><strong>Version 1.104</strong> - 4/3/2022</dt>
+    <dd>AddedCleric Deity Section</dd>
+    <dd>Added Turning events</dd>
+    <dd>Added Prayer and turning slot tracking</dd>
     <dt><strong>Version 1.103</strong> - 4/3/2022</dt>
     <dd>Cleric Spell overhaul including all included spells and descriptions</dd>
     <dt><strong>Version 1.102</strong> - 4/3/2022</dt>
