--- a/src/app/hirelings/hirelings.component.sass
+++ b/src/app/hirelings/hirelings.component.sass
@@ -6,3 +6,11 @@
 .remove-hireling-button
   position: absolute
   right: 16px
+div.center
+  width: 100%
+  display: flex
+  flex-flow: row
+  justify-content: center
+
+input#upload
+  display: none
