--- a/src/app/hirelings/hirelings.component.html
+++ b/src/app/hirelings/hirelings.component.html
@@ -3,6 +3,10 @@
     <button class='add-hireling-button' color="primary" mat-mini-fab (click)="addHireling()">
       <mat-icon>add</mat-icon>
     </button>
+    <button class='add-hireling-button' color="primary" mat-mini-fab (click)="uploader.click()">
+      <mat-icon>arrow_upwards</mat-icon>
+    </button>
+    <input type="file" id="upload" #uploader (change)="importHireling($event)"/>
   </div>
   <mat-tab-group>
     <mat-tab *ngFor="let character of getHirelings()" label="{{bestLabel(character)}}">
