--- a/src/app/raw-edit/raw-edit.component.html
+++ b/src/app/raw-edit/raw-edit.component.html
@@ -9,6 +9,8 @@
 <div class="changelog container">
   <h1>Change Log</h1>
   <dl>
+    <dt><strong>Version 1.102</strong> - 07/29/2024</dt>
+    <dd>Allowed the importing of characters as hirelings</dd>
     <dt><strong>Version 1.101</strong> - 10/8/2020</dt>
     <dd>Added AC to the HUD</dd>
     <dd>Large Multiclassing Feature enabled</dd>
