--- a/src/app/raw-edit/raw-edit.component.html
+++ b/src/app/raw-edit/raw-edit.component.html
@@ -9,6 +9,8 @@
 <div class="changelog container">
   <h1>Change Log</h1>
   <dl>
+    <dt><strong>Version 1.105</strong> - 07/29/2024</dt>
+    <dd>Allowed the importing of characters as hirelings</dd>
     <dt><strong>Version 1.104</strong> - 4/3/2022</dt>
     <dd>AddedCleric Deity Section</dd>
     <dd>Added Turning events</dd>
