--- a/src/app/show-character/character-overview/character-overview.component.sass
+++ b/src/app/show-character/character-overview/character-overview.component.sass
@@ -10,7 +10,7 @@
     h2
       text-align: center
   mat-form-field
-    margin: 0 auto
+    margin: 10px auto
     width: 100%
   button
     margin: 0 auto
