--- a/src/app/show-character/character-mounts/character-mounts.component.sass
+++ b/src/app/show-character/character-mounts/character-mounts.component.sass
@@ -10,7 +10,7 @@
 
 mat-card
   margin: 24px auto
-  width: 22%
+  width: 40%
   h2
     margin-bottom: 0
   mat-form-field
@@ -20,6 +20,8 @@ mat-card
 .add-mount-button
   margin: 24px auto
   display: block
+.add-item
+  text-align: center
 
 @media screen and (max-width: 1650px)
   .mount mat-card
@@ -31,4 +33,5 @@ mat-card
 @media screen and (max-width: 1024px)
   .mount mat-card
     width: 60%
+
 
