--- a/src/app/show-character/character-purse/character-purse.component.html
+++ b/src/app/show-character/character-purse/character-purse.component.html
@@ -56,16 +56,20 @@
     </mat-card-content>
   </mat-card>
   <mat-card appearance="outlined">
+    <mat-card-content>
     <mat-list>
       <h2>Gems & Valuables</h2>
       <item-list [items]="character.purse.gems"></item-list>
     </mat-list>
+    </mat-card-content>
   </mat-card>
   <mat-card appearance="outlined">
+    <mat-card-content>
     <mat-list>
       <h2>Magic Items</h2>
       <item-list [items]="character.magic_items">
       </item-list>
     </mat-list>
+    </mat-card-content>
   </mat-card>
 </div>
