--- a/src/app/show-character/item-list/item/item.component.sass
+++ b/src/app/show-character/item-list/item/item.component.sass
@@ -2,10 +2,15 @@
   position: absolute
   right: 12px
   bottom: 4px
+  text-align: right
 button.edit-item-button mat-icon
   color: white
 
 .empty
   text-decoration: line-through
+
+button
+  padding: 0
+  margin: 0
 
 
