--- a/src/app/show-character/character-attributes/character-attributes.component.sass
+++ b/src/app/show-character/character-attributes/character-attributes.component.sass
@@ -6,11 +6,14 @@
   color: #222288
 
 mat-card
-  width: 12%
+  width: 15%
   .ability-info-icon
     position: absolute
     top: 4px
     right: 4px
+  mat-card-content
+    text-align: center
+
 
 mat-expansion-panel
   width: 75%
