--- a/src/app/show-character/character-experience/character-experience.component.sass
+++ b/src/app/show-character/character-experience/character-experience.component.sass
@@ -28,6 +28,8 @@ h2
     right: 8px
     bottom: 8px
   .new-class
+    mat-card-content
+      text-align: center
     .table
       width: 100%
       height: 100%
@@ -35,6 +37,8 @@ h2
       .table-cell
         vertical-align: middle
         display: table-cell
+  .progress-bar
+    text-align: center
 
 @media screen and (max-width: 820px)
   #experience
