--- a/src/styles.sass
+++ b/src/styles.sass
@@ -31,6 +31,7 @@ mat-toolbar a
       color: white
 
 
+
 h1.section-title
   font-size: 64px
   line-height: 64px
@@ -67,13 +68,20 @@ h2.section-subtitle
     h4
       text-align: center
       margin-bottom: 32px
+      padding-top: 25px
     h1,h2,h3,h4,h5
       font-family: Cinzel
+      text-align: center
     strong
       font-size: 28px
       font-family: Cinzel
-
-
+    mat-card-content
+      text-align: left
+    .editing
+      mat-list-item
+        min-height: 65px
+        margin: 0
+        padding: 0
 
 mat-dialog-content
   width: 50vw
